--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,179 @@
-.topnav {
-  overflow: hidden;
-  background-color: #333;
+body{
+    margin: 0;
+    padding: 0;
 }
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+* {
+    box-sizing: border-box;
+    transition: 0.4s ease all;
+  }
+.navbar {
+  background: #080808;
+  color: #fff;
+  padding: 15px;
+  width: 100%;
+  height: 65px;
+  display: flex;
+  align-items: center;
+}
+.navbar .logo {
+  cursor: pointer;
+  font-family: "Lacquer";
+}
+.navbar ul.links {
+  font-family: "Nunito";
+  margin-left: auto;
+  margin-right: 50px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  transition: 0.4s ease all, 0s ease background;
+}
+.navbar ul.links li {
+  text-transform: uppercase;
+  padding: 0 15px;
+  height: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s ease all, 0s ease margin;
+}
+.navbar ul.links li a {
   text-decoration: none;
-  font-size: 17px;
+  color: #fff;
 }
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.navbar ul.links li:hover {
+  background: #ffc600;
+  cursor: pointer;
 }
-
-.active {
-  background-color: #4CAF50;
+.navbar ul.links li:hover a {
+  color: #080808;
+}
+button {
+  background: #ffc600;
+  outline: none;
+  font-weight: bold;
+  padding: 10px 18px;
+  border-radius: 25px;
+  border: 1px solid #e6b200;
+  letter-spacing: 1px;
+}
+button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
   color: white;
+  background: #222;
+  border-color: #000;
 }
-
-.topnav .icon {
-  display: none;
+.content {
+  background-size: cover;
+  height: calc(100vh - 65px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
 }
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
+.content h2 {
+  color: #ffc600;
+}
+.navbar.sticky {
+  position: fixed;
+  z-index: 40;
+}
+.navbar.sticky ~ main {
+  position: relative;
+  z-index: 20;
+  top: 65px;
+}
+section {
+  background: #000;
+  color: #ffc600;
+  padding: 20px;
+  font-family: "Lacquer";
+  font-weight: bold;
+  letter-spacing: 0.5px;
+}
+@media screen and (max-width: 850px) {
+  .navbar .right {
+    height: 0;
+    overflow: hidden;
   }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .toggle {
     position: absolute;
-    right: 0;
-    top: 0;
+    top: 32.5px;
+    right: 20px;
+    z-index: 99;
+    transform: translateY(-50%);
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
+  .toggle > * {
+    width: 80%;
+    height: 2px;
+    background: #fff;
+    margin: 3px 0;
+  }
+  .navbar.collapsed .toggle .line1 {
+    transform: rotate(-45deg) translate(-4px, 5px);
+  }
+  .navbar.collapsed .toggle .line2 {
+    opacity: 0;
+  }
+  .navbar.collapsed .toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+  .navbar.collapsed .logo {
+    position: absolute;
+    z-index: 44;
+  }
+  .navbar .links {
+    position: fixed;
+    background: #080808;
+    font-family: "Nunito";
+    z-index: 40;
+    top: 0;
+    left: -100%;
+    flex-direction: column;
+    width: 45vw;
+    height: 100vh;
+  }
+  .navbar .links li:first-child {
+    margin-top: 80px;
+  }
+  .navbar.collapsed .links {
+    left: 0;
+  }
+  .navbar.collapsed .links a {
+    color: #fff;
+  }
+  .navbar.collapsed .links li {
+    width: 100%;
+  }
+  .navbar.collapsed .links li:hover a {
+    color: #080808;
+  }
+  .navbar.collapsed .right {
+    position: fixed;
+    font-family: "Nunito";
+    width: 45vw;
+    text-align: center;
+    height: auto;
+    bottom: 40px;
+    left: 22.5vw;
+    transform: translateX(-50%);
+    z-index: 45;
+  }
+  .navbar.collapsed ~ main {
+    filter: blur(1px);
+    opacity: 0.8;
+  }
+  .navbar.sticky {
+    position: fixed;
+    z-index: 40;
   }
 }
