--- a/css/style.css
+++ b/css/style.css
@@ -1,167 +1,26 @@
 @import url("https://fonts.googleapis.com/css?family=Lacquer|Nunito&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Nunito&display=swap");
 body{
     margin: 0;
     padding: 0;
 }
 * {
     box-sizing: border-box;
-    transition: 0.4s ease all;
+    font-family: 'Lato', sans-serif;
   }
-.navbar {
-  padding: 15px;
-  width: 100%;
-  height: 65px;
+.contsiner{
+  width: 1440px;
+  max-width: 100%;
+}
+.navbar, .links{
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
-.navbar .logo {
-  cursor: pointer;
-  font-family: "Lacquer";
-}
-.navbar ul.links {
-  font-family: "Nunito";
-  margin-left: auto;
-  margin-right: 50px;
+.links li{
   list-style: none;
-  display: flex;
-  align-items: center;
-  transition: 0.4s ease all, 0s ease background;
+  gap: 10px;
 }
-.navbar ul.links li {
-  padding: 0 15px;
-  height: 65px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.4s ease all, 0s ease margin;
-}
-.navbar ul.links li a {
+.links a{
   text-decoration: none;
-  color: #fff;
-}
-.navbar ul.links li:hover a {
-  color: #197738;
-  cursor: pointer;
-}
-button {
-  outline: none;
-  font-weight: bold;
-  padding: 10px 18px;
-  border-radius: 25px;
-  letter-spacing: 1px;
-}
-button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  color: #197738;
-  border-color: #000;
-}
-.content {
-  background-size: cover;
-  height: calc(100vh - 65px);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-}
-.navbar.sticky {
-  position: fixed;
-  z-index: 40;
-}
-.navbar.sticky ~ main {
-  position: relative;
-  z-index: 20;
-  top: 65px;
-}
-section {
-  padding: 20px;
-  font-family: "Lacquer";
-  font-weight: bold;
-  letter-spacing: 0.5px;
-}
-@media screen and (max-width: 850px) {
-  .navbar .right {
-    height: 0;
-    overflow: hidden;
-  }
-  .toggle {
-    position: absolute;
-    top: 32.5px;
-    right: 20px;
-    z-index: 99;
-    transform: translateY(-50%);
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .toggle > * {
-    width: 80%;
-    height: 2px;
-    background: #fff;
-    margin: 3px 0;
-  }
-  .navbar.collapsed .toggle .line1 {
-    transform: rotate(-45deg) translate(-4px, 5px);
-  }
-  .navbar.collapsed .toggle .line2 {
-    opacity: 0;
-  }
-  .navbar.collapsed .toggle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
-  }
-  .navbar.collapsed .logo {
-    position: absolute;
-    z-index: 44;
-  }
-  .navbar .links {
-    position: fixed;
-    background: #080808;
-    font-family: "Nunito";
-    z-index: 40;
-    top: 0;
-    left: -100%;
-    flex-direction: column;
-    width: 45vw;
-    height: 100vh;
-  }
-  .navbar .links li:first-child {
-    margin-top: 80px;
-  }
-  .navbar.collapsed .links {
-    left: 0;
-  }
-  .navbar.collapsed .links a {
-    color: #fff;
-  }
-  .navbar.collapsed .links li {
-    width: 100%;
-  }
-  .navbar.collapsed .links li:hover a {
-    color: #080808;
-  }
-  .navbar.collapsed .right {
-    position: fixed;
-    font-family: "Nunito";
-    width: 45vw;
-    text-align: center;
-    height: auto;
-    bottom: 40px;
-    left: 22.5vw;
-    transform: translateX(-50%);
-    z-index: 45;
-  }
-  .navbar.collapsed ~ main {
-    filter: blur(1px);
-    opacity: 0.8;
-  }
-  .navbar.sticky {
-    position: fixed;
-    z-index: 40;
-  }
+  color: black;
 }
