--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,8 @@
 }
 body{
   background-image: url("../img/body-fon.svg");
-  background-size: no-repeat;
+  background-repeat: no-repeat;
   background-size: cover;
-
 }
 .container{
   width: 940px;
@@ -32,7 +31,7 @@ body{
 .navbar-left, .navbar-right{
   display: flex;
   flex-wrap: wrap;
-  gap: 20px
+  gap: 20px;
 }
 /*Меню ссылки*/
 .navbar-left li{
@@ -41,10 +40,11 @@ body{
 }
 .navbar-left a{
   text-decoration: none;
-  color: black;
+  color: white;
 }
 .logo h2{
   font-family: 'Lacquer', sans-serif;
+  color: white;
 }
 .navbar-left a:hover, .navbar-right button:hover{
   color: var(--green-color);
@@ -56,6 +56,7 @@ body{
   font-size: 0.7rem;
   gap: 20px;
   cursor: pointer;
+  color: white;
 }
 /* Бургер-меню */
 .mobile-menu{
@@ -68,7 +69,7 @@ body{
 }
 .mobile-menu a{
   text-decoration: none;
-  color: black;
+  color: white;
 }
 .navbar-toggle {
   display: none;
@@ -82,7 +83,7 @@ body{
 .bar {
   width: 25px;
   height: 3px;
-  background-color: black;
+  background-color: white;
   transition: 0.4s;
 }
 @media (max-width: 700px) {
@@ -91,9 +92,37 @@ body{
   }
   .navbar-toggle {
       display: block;
+      color: white;
   }
   .navbar-left, .navbar-right {
       display: none;
   }
 }
 /*Бургер*/
+/*main*/
+.main{
+  text-align: center;
+}
+.main h1{
+  margin-top: 220px;
+  font-size: 60px;
+  font-family: 'Rubik Mono One';
+  color: white;
+}
+.main p{
+  margin: 50px 0 120px 0;
+  color: white;
+}
+.search{
+  display: flex;
+  width: 940px;
+  padding: 22.5px 142px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  color: white;
+  border: 2px solid #FFF;
+  background: linear-gradient(137deg, rgba(255, 255, 255, 0.28) 0%, rgba(255, 255, 255, 0.00) 102.62%);
+  backdrop-filter: blur(25px);
+  font-size: 24px;
+}
